# ChangeLog for net-analyzer/icinga2
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga2/ChangeLog,v 1.13 2014/12/10 04:02:28 prometheanfire Exp $

  10 Dec 2014; Matthew Thode <prometheanfire@gentoo.org> icinga2-2.2.1.ebuild:
  fixing the usage of postgres and mysql

  09 Dec 2014; Matthew Thode <prometheanfire@gentoo.org> icinga2-2.2.1.ebuild:
  fixing the group ownership stuff

*icinga2-2.2.1 (09 Dec 2014)

  09 Dec 2014; Matthew Thode <prometheanfire@gentoo.org> +files/icinga2.confd,
  +files/icinga2.initd, +icinga2-2.2.1.ebuild:
  multiple fixes :D bug 528962 and bug 528946  fixing bugs 528962 528946 Thanks
  florian for the init scripts

  03 Nov 2014; Aaron W. Swenson <titanofold@gentoo.org> icinga2-2.0.2.ebuild,
  icinga2-2.1.0-r3.ebuild:
  Update PostgreSQL dependencies and/or checks to virtual/postgresql.

*icinga2-2.1.0-r3 (01 Sep 2014)

  01 Sep 2014; Matthew Thode <prometheanfire@gentoo.org>
  +files/icinga2-2.1.0-create_var_cache.patch, +icinga2-2.1.0-r3.ebuild,
  -icinga2-2.1.0-r2.ebuild, metadata.xml:
  another bump from feandil

*icinga2-2.1.0-r2 (30 Aug 2014)

  30 Aug 2014; Matthew Thode <prometheanfire@gentoo.org>
  +icinga2-2.1.0-r2.ebuild, -icinga2-2.1.0-r1.ebuild:
  more correcting of deps

  30 Aug 2014; Matthew Thode <prometheanfire@gentoo.org> metadata.xml:
  updating manifest

*icinga2-2.1.0-r1 (30 Aug 2014)

  30 Aug 2014; Matthew Thode <prometheanfire@gentoo.org>
  +icinga2-2.1.0-r1.ebuild, -icinga2-2.1.0.ebuild:
  fixing python dep

*icinga2-2.1.0 (30 Aug 2014)

  30 Aug 2014; Matthew Thode <prometheanfire@gentoo.org> +icinga2-2.1.0.ebuild,
  -icinga2-2.0.1.ebuild:
  bup

*icinga2-2.0.2 (22 Aug 2014)

  22 Aug 2014; Matthew Thode <prometheanfire@gentoo.org> +icinga2-2.0.2.ebuild,
  -icinga2-2.0.0.ebuild:
  bup

*icinga2-2.0.1 (17 Jul 2014)

  17 Jul 2014; Matthew Thode <prometheanfire@gentoo.org> +icinga2-2.0.1.ebuild:
  bup

*icinga2-2.0.0 (16 Jun 2014)
